syntax="proto3";

option go_package = "./proto";

package simple_greet;

service SimpleGreet {
    rpc SayHello(NoParam) returns (HelloResponse);
    rpc SayHelloServerStream(NameList) returns (stream HelloResponse);
    rpc SayHelloClientStream(stream NameList) returns (MessageList);
    rpc SayHelloBidirectionalStream(stream HelloResponse) returns (stream HelloResponse);
}
message NoParam{};
message HelloResponse {
    string message = 1; 
}message NameList {
    repeated string names = 1;
}
message MessageList {
    repeated string messages = 1;
}
